--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sugeshna Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio</title>
+
+  <!-- THIS LINE CONNECTS YOUR CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <header class="top-name">SUGESHNA</header>
+  <!-- Top right name -->
+  <div class="top-name fade-in">SUGESHNA</div>
 
-    <section class="hero">
-        <div class="welcome-text">
-            <h2>welcome to my</h2>
-            <h1>PORTFOLIO</h1>
-        </div>
+  <!-- Left text -->
+  <div class="hero-text fade-in">
+    <h2>welcome to my</h2>
+    <h1>PORTFOLIO</h1>
+  </div>
 
-        <img src="me.png" alt="Sugeshna" class="hero-img">
-    </section>
+  <!-- Your image -->
+  <img src="me.png" alt="Sugeshna" class="hero-img" />
 </body>
 </html>
