--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-
-  <!-- THIS LINE CONNECTS YOUR CSS -->
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sugeshna Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <!-- Top right name -->
-  <div class="top-name fade-in">SUGESHNA</div>
 
-  <!-- Left text -->
-  <div class="hero-text fade-in">
-    <h2>welcome to my</h2>
-    <h1>PORTFOLIO</h1>
-  </div>
+    <!-- Top Right Name -->
+    <div class="top-name fade-in">SUGESHNA</div>
 
-  <!-- Your image -->
-  <img src="me.png" alt="Sugeshna" class="hero-img" />
+    <!-- Main Section -->
+    <div class="hero-container">
+
+        <div class="hero-text fade-in">
+            <h2>welcome to my</h2>
+            <h1>PORTFOLIO</h1>
+        </div>
+
+        <!-- Your Image -->
+        <img src="me.png" class="hero-img fade-in" alt="Sugeshna">
+
+    </div>
+
 </body>
 </html>
