--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sugeshna Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-    <!-- Top Right Name -->
     <div class="top-name fade-in">SUGESHNA</div>
 
-    <!-- Main Section -->
     <div class="hero-container">
-
         <div class="hero-text fade-in">
             <h2>welcome to my</h2>
             <h1>PORTFOLIO</h1>
         </div>
 
-        <!-- Your Image -->
-        <img src="me.png" class="hero-img fade-in" alt="Sugeshna">
-
+        <img src="me.png" alt="Sugeshna" class="hero-img fade-in">
     </div>
 
 </body>
