--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
 
 <body>
 
-    <div class="top-name fade-in">SUGESHNA</div>
+    <!-- Name at the top-right -->
+    <div class="top-name">SUGESHNA</div>
 
-    <div class="hero-container">
-        <div class="hero-text fade-in">
-            <h2>welcome to my</h2>
-            <h1>PORTFOLIO</h1>
+    <!-- Main hero section -->
+    <section class="hero">
+        <div class="hero-inner">
+            <div class="hero-text">
+                <h2 class="subtitle">welcome to my</h2>
+                <h1 class="title">PORTFOLIO</h1>
+            </div>
+
+            <!-- Your picture overlapping the text -->
+            <div class="hero-img-wrapper">
+                <img src="me.png" alt="Sugeshna" class="hero-img" />
+            </div>
         </div>
-
-        <img src="me.png" alt="Sugeshna" class="hero-img fade-in">
-    </div>
+    </section>
 
 </body>
 </html>
