--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sugeshna Portfolio</title>
+    <title>Sugeshna | Portfolio</title>
+
+    <!-- Google Fonts: script + deco (closest to your reference) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Limelight&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Main CSS -->
     <link rel="stylesheet" href="style.css" />
-</head>
+  </head>
+  <body>
+    <!-- Top-right name -->
+    <header class="top-bar">
+      <div class="brand">SUGESHNA</div>
+    </header>
 
-<body>
+    <!-- Hero section -->
+    <main class="hero">
+      <div class="hero-content">
+        <p class="welcome-text">WELCOME TO MY</p>
 
-    <!-- Name at the top-right -->
-    <div class="top-name">SUGESHNA</div>
+        <!-- Headline with per-letter spans for animation -->
+        <h1 class="headline">
+          <span>P</span>
+          <span>O</span>
+          <span>R</span>
+          <span>T</span>
+          <span>F</span>
+          <span>O</span>
+          <span>L</span>
+          <span>I</span>
+          <span>O</span>
+        </h1>
+      </div>
 
-    <!-- Main hero section -->
-    <section class="hero">
-        <div class="hero-inner">
-            <div class="hero-text">
-                <h2 class="subtitle">welcome to my</h2>
-                <h1 class="title">PORTFOLIO</h1>
-            </div>
-
-            <!-- Your picture overlapping the text -->
-            <div class="hero-img-wrapper">
-                <img src="me.png" alt="Sugeshna" class="hero-img" />
-            </div>
-        </div>
-    </section>
-
-</body>
+      <!-- Your image -->
+      <div class="hero-photo">
+        <img src="me.png" alt="Sugeshna" />
+      </div>
+    </main>
+  </body>
 </html>
