--- a/index.html
+++ b/index.html
@@ -2,46 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Sugeshna | Portfolio</title>
+    <title>Sugeshna Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google Fonts: script + deco (closest to your reference) -->
+    <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Limelight&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Limelight&family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Main CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Top-right name -->
-    <header class="top-bar">
-      <div class="brand">SUGESHNA</div>
-    </header>
+    <div class="hero">
+      <header class="top-bar">
+        <span class="logo">
+          SUGESHNA SANTHALINGAM SUBBULAKSHMI
+        </span>
+      </header>
 
-    <!-- Hero section -->
-    <main class="hero">
-      <div class="hero-content">
-        <p class="welcome-text">WELCOME TO MY</p>
+      <main class="hero-content">
+        <div class="text-block">
+          <p class="eyebrow">welcome to my</p>
 
-        <!-- Headline with per-letter spans for animation -->
-        <h1 class="headline">
-          <span>P</span>
-          <span>O</span>
-          <span>R</span>
-          <span>T</span>
-          <span>F</span>
-          <span>O</span>
-          <span>L</span>
-          <span>I</span>
-          <span>O</span>
-        </h1>
-      </div>
+          <h1 class="headline">
+            PORTFOLIO
+          </h1>
+        </div>
 
-      <!-- Your image -->
-      <div class="hero-photo">
-        <img src="me.png" alt="Sugeshna" />
-      </div>
-    </main>
+        <div class="photo-wrapper">
+          <!-- make sure this file is literally named me.png in the repo -->
+          <img src="me.png" alt="Sugeshna in blazer" class="hero-photo" />
+        </div>
+      </main>
+    </div>
   </body>
 </html>
