--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section id="journey" class="section journey-section">
     <div class="journey-header slide-in-up">
       <p class="journey-eyebrow">what I have done so far</p>
-      <h2 class="journey-title">MY IS JOURNEY</h2>
+      <h2 class="journey-title">MY INFORMATION SYSTEMS JOURNEY</h2>
     </div>
 
     <div class="timeline">
@@ -169,7 +169,6 @@
         </div>
 
         <div class="timeline-side timeline-date">
-          <!-- Right side label = Remote like you asked -->
           <span>Remote</span>
         </div>
       </div>
