--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <!-- ========= PAGE 1 : HERO ========= -->
   <header class="hero" id="top">
     <div class="hero-name">
@@ -110,7 +111,7 @@
 
         <div class="timeline-center">
           <div class="timeline-circle">
-            <img src="psg.png" alt="PSG logo" />
+            <img src="psg-logo.png" alt="PSG logo" class="timeline-logo" />
           </div>
         </div>
 
@@ -127,7 +128,7 @@
 
         <div class="timeline-center">
           <div class="timeline-circle">
-            <img src="utoledo.png" alt="University of Toledo logo" />
+            <img src="utoledo-logo.png" alt="University of Toledo logo" class="timeline-logo" />
           </div>
         </div>
 
@@ -144,8 +145,21 @@
         </div>
       </div>
 
-      <!-- 3. TRI BEE – LEFT CARD -->
-      <div class="timeline-item left slide-in-left">
+      <!-- 3. TRI BEE – RIGHT CARD (DATE OPPOSITE, REMOTE UNDER ROLE) -->
+      <div class="timeline-item right slide-in-right">
+        <!-- DATE on the LEFT side of the line -->
+        <div class="timeline-side timeline-date">
+          <span>Jan 2024 – June 2024</span>
+        </div>
+
+        <!-- CIRCLE LOGO IN THE MIDDLE -->
+        <div class="timeline-center">
+          <div class="timeline-circle">
+            <img src="tribee-logo.png" alt="Tri Bee logo" class="timeline-logo" />
+          </div>
+        </div>
+
+        <!-- CARD on the RIGHT -->
         <div class="timeline-side timeline-card">
           <h3>Tri Bee — Data Analytics Intern</h3>
           <p class="timeline-institution">Remote</p>
@@ -157,19 +171,6 @@
             Designed interactive Power BI dashboards to present insights and
             guide strategic decision-making.
           </p>
-          <p class="timeline-text">
-            Jan 2024 – June 2024
-          </p>
-        </div>
-
-        <div class="timeline-center">
-          <div class="timeline-circle">
-            <img src="tribee.png" alt="Tri Bee logo" />
-          </div>
-        </div>
-
-        <div class="timeline-side timeline-date">
-          <span>Remote</span>
         </div>
       </div>
 
